# meal-planner

./: .gitignore  Cargo.toml  README.md
config/: config.example.toml
src/: config.rs  main.rs  telemetry.rs
src/agent/: loop.rs  mod.rs
src/llm/: client.rs
src/mealie/: client.rs
src/memory/: store.rs
src/tools/: definitions.rs  executor.rs  mod.rs
