[package]
name = "meal-planner"
description = "A meal planning assistant that generates recipes and shopping lists based on user preferences and dietary restrictions."
version = "0.1.0"
edition = "2024"
rust-version = "1.94"

[dependencies]
anyhow = "1"
async-openai = { version = "0.33", features = ["chat-completion"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
reqwest = { version = "0.13", features = ["json", "query"] }
rusqlite = { version = "0.39", features = ["bundled"] }
rustyline = "17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
